objects/TW1_Propriedade_da_Cotacao__c.object
<CustomObject>

    <description>Objeto de junção entre propriedade e cotação</description>
    <fields>
        <fullName>TW1_Area__c</fullName>
        <label>Área</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    
    <fields>
        <fullName>TW1_Data_de_fim__c</fullName>
        <label>Data de fim</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_Data_de_inicio__c</fullName>
        <label>Data de início</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_Localizacao__c</fullName>
        <label>Localização</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    
    <fields>
        <fullName>TW1_Valor__c</fullName>
        <label>Valor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_tipo_de_propriedade__c</fullName>
        <formula>TW1_Propriedade__r.RecordType.Name</formula>
        <label>Tipo de propriedade</label>
        <type>Text</type>
    </fields>
    <label>Propriedade da Cotação</label>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0}</displayFormat>
        <label>Identificador</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Propriedades da Cotação</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>